# wizbit-sharp

./: AssemblyInfo.cs.in  Makefile.am  Makefile.include  autogen.sh  configure.in
sources/: Makefile.am  sources.xml
wizbit/: Makefile.am  wizbit-api.raw  wizbit-sharp.pc.in  wizbit-sources.xml.in
