
DISTCLEANFILES = 
EXTRA_DIST = 

pkg = wizbit
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = wizbit-sharp.pc
pkgversion = 0.0.1

API_VERSION = 0.0.1.0
INCLUDE_API =
METADATA = metadata
references =

sources =

customs =

add_dist = wizbit-sharp.pc.in wizbit-sharp.dll.config.in

include ../Makefile.include

