
DISTCLEANFILES = 
EXTRA_DIST = 

pkg = wizbit
pkgversion = 0.0.1

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = wizbit-sharp.pc
add_dist = wizbit-sharp.pc.in wizbit-sharp.dll.config.in

SNK = wizbit.snk
INCLUDE_API =
INCLUDE_EXTRA = $(GTK_SHARP_CFLAGS)
METADATA = wizbit.metadata
references =
sources =
customs =

include $(top_srcdir)/Makefile.include

